# carbon1dot1-assembler

./: .gitignore  Cargo.toml  out.schem  test.s
examples/: CARBON_PROG_BSR_TEST.disasm  CARBON_PROG_BSR_TEST.s  CARBON_PROG_BSR_TEST.txt  CARBON_PROG_BSR_TEST2.disasm  CARBON_PROG_BSR_TEST2.txt  CARBON_PROG_COLLATZ.disasm  CARBON_PROG_COLLATZ.s  CARBON_PROG_COLLATZ.schem  CARBON_PROG_COLLATZ.txt  CARBON_PROG_FIB.disasm  CARBON_PROG_FIB.s  CARBON_PROG_FIB.txt  CARBON_PROG_LIM_TEST.disasm  CARBON_PROG_LIM_TEST.s  CARBON_PROG_LIM_TEST.txt  CARBON_PROG_PAGE_TEST.disasm  CARBON_PROG_PAGE_TEST.s  CARBON_PROG_PAGE_TEST.txt  test_brc.s  test_brc.txt  test_brc_add.s  test_brc_add.txt  test_brc_page.s  test_brc_page.txt
src/: assembler.rs  ast.rs  disassembler.rs  lib.rs  lower_labels.rs  main.rs  name_mangling.rs  parser.lalrpop  parser.rs  romgen.rs
