[package]
name = "carbon1dot1-assembler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
mcschem = "0.1.1"
regex = "1.7.9"

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }
